--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -13,18 +13,11 @@
                 <li>
                     <a href="#">hệ thống rạp phim</a>
                     <ul class="submenu">
-                        <li>
-                            <a href="/cinema">wowo cần thơ</a>
-                        </li>
-                        <li>
-                            <a href="/cinema">wowo hồ chí minh</a>
-                        </li>
-                        <li>
-                            <a href="/cinema">wowo đà nẵng</a>
-                        </li>
-                        <li>
-                            <a href="/cinema">wowo hà nội</a>
-                        </li>
+                        {{#each cinemas}}
+                            <li>
+                                <a href="/cinema/{{this.dataValues.unsignedName}}">{{this.dataValues.name}}</a>
+                            </li>
+                        {{/each}}
                     </ul>
                 </li>
                 <li class="header-button pr-0">
