--- a/src/views/partials/css-links.hbs
+++ b/src/views/partials/css-links.hbs
@@ -7,4 +7,5 @@
 <link rel="stylesheet" href="/stylesheets/owl.carousel.min.css" />
 <link rel="stylesheet" href="/stylesheets/owl.theme.default.min.css" />
 <link rel="stylesheet" href="/stylesheets/nice-select.css" />
+<link rel="stylesheet" href="/stylesheets/jquery-ui.css">
 <link rel="stylesheet" href="/stylesheets/main.css" />
