--- a/src/views/partials/js-links.hbs
+++ b/src/views/partials/js-links.hbs
@@ -12,4 +12,5 @@
 <script src="/javascripts/nice-select.js"></script>
 <script src="/javascripts/jquery.validate.min.js"></script>
 <script src="/javascripts/jquery.redirect.js"></script>
+<script src="/javascripts/jquery-ui.js"></script>
 <script src="/javascripts/main.js"></script>
