--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -15,7 +15,7 @@
                     <ul class="submenu">
                         {{#each cinemas}}
                             <li>
-                                <a href="/cinema/{{this.dataValues.unsignedName}}">{{this.dataValues.name}}</a>
+                                <a href="/cinema/{{this.unsignedName}}">{{this.name}}</a>
                             </li>
                         {{/each}}
                     </ul>
