--- a/src/views/pages/movie.hbs
+++ b/src/views/pages/movie.hbs
@@ -1,22 +1,22 @@
-<section class="details-banner bg_img" data-background="/images/movie/banner/banner-{{movie.dataValues.image}}.jpg">
+<section class="details-banner bg_img" data-background="/images/movie/banner/banner-{{movie.image}}.jpg">
     <div class="container">
         <div class="details-banner-wrapper">
             <div class="details-banner-thumb">
-                <img src="/images/movie/poster/poster-{{movie.dataValues.image}}.jpg" alt="poster" />
-                <a href="https://www.youtube.com/watch?v={{movie.dataValues.video}}" class="video-popup">
+                <img src="/images/movie/poster/poster-{{movie.image}}.jpg" alt="poster" />
+                <a href="https://www.youtube.com/watch?v={{movie.video}}" class="video-popup">
                     <img src="/images/movie/icon/video-button.png" alt="play" />
                 </a>
             </div>
             <div class="details-banner-content offset-lg-3">
-                <h3 class="title">{{movie.dataValues.name}}</h3>
-                <a class="button">{{movie.dataValues.category}}</a>
+                <h3 class="title">{{movie.name}}</h3>
+                <a class="button">{{movie.category}}</a>
                 <div class="social-and-duration">
                     <div class="duration-area">
                         <div class="item">
-                            <i class="fas fa-calendar-alt"></i><span>{{movie.dataValues.openingDay}}</span>
+                            <i class="fas fa-calendar-alt"></i><span>{{movie.openingDay}}</span>
                         </div>
                         <div class="item">
-                            <i class="far fa-clock"></i><span>{{movie.dataValues.time}} phút</span>
+                            <i class="far fa-clock"></i><span>{{movie.time}} phút</span>
                         </div>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                             <img src="/images/movie/icon/director.png" alt="director" />
                         </div>
                         <p>
-                            <b>Đạo diễn:</b> {{movie.dataValues.director}}
+                            <b>đạo diễn:</b> {{movie.director}}
                         </p>
                     </div>
                 </div>
@@ -44,7 +44,7 @@
                         <div class="thumb">
                             <img src="/images/movie/icon/country.png" alt="country" />
                         </div>
-                        <p><b>Quốc gia:</b> {{movie.dataValues.country}}</p>
+                        <p><b>quốc gia:</b> {{movie.country}}</p>
                     </div>
                 </div>
             </div>
@@ -57,13 +57,13 @@
         <div class="row justify-content-center flex-wrap-reverse mb--50">
             <div class="col-lg-12 mb-50">
                 <div class="movie-details">
-                    {{#if images}}
+                    {{#if movie.MovieImages}}
                         <h3 class="title">hình ảnh</h3>
                         <div class="details-photos owl-carousel">
-                            {{#each images}}
+                            {{#each movie.MovieImages}}
                                 <div class="thumb">
-                                    <a href="/images/movie/image/movie-{{this.dataValues.name}}.jpg" class="img-pop">
-                                        <img src="/images/movie/image/movie-{{this.dataValues.name}}.jpg" alt="image" />
+                                    <a href="/images/movie/image/movie-{{this.name}}.jpg" class="img-pop">
+                                        <img src="/images/movie/image/movie-{{this.name}}.jpg" alt="image" />
                                     </a>
                                 </div>
                             {{/each}}
@@ -86,8 +86,8 @@
                                                 <span class="type">cụm rạp</span>
                                                 <select class="select-bar cinemas" name="cinema">
                                                     {{#each cinemas}}
-                                                        <option value="{{this.dataValues.unsignedName}}">
-                                                            {{this.dataValues.name}}
+                                                        <option value="{{this.unsignedName}}">
+                                                            {{this.name}}
                                                         </option>
                                                     {{/each}}
                                                 </select>
@@ -97,31 +97,30 @@
                                     <div class="ticket-plan-section">
                                         <div class="row justify-content-center">
                                             <div class="col-lg-12 mb-5 mb-lg-0">
-                                                <ul class="seat-plan-wrapper bg-five">
-                                                    <li>
-                                                        <div class="movie-name">
-                                                            <div class="icons">
-                                                                <i class="fas fa-film"></i>
-                                                                <i class="">2D</i>
-                                                            </div>
-                                                            <a href="#0" class="name">Genesis Cinema</a>
-                                                        </div>
-                                                        <div class="movie-schedule">
-                                                            <div class="item">
-                                                                09:40
-                                                            </div>
-                                                            <div class="item">
-                                                                13:45
-                                                            </div>
-                                                            <div class="item">
-                                                                15:45
-                                                            </div>
-                                                            <div class="item">
-                                                                19:50
-                                                            </div>
-                                                        </div>
-                                                    </li>
-                                                </ul>
+                                                {{#if cinema}}
+                                                    <ul class="seat-plan-wrapper bg-five">
+                                                        {{#each cinema.Rooms}}
+                                                            <li>
+                                                                <div class="movie-name">
+                                                                    <div class="icons">
+                                                                        <i class="fas fa-film"></i>
+                                                                        <i>{{this.RoomType.name}}</i>
+                                                                    </div>
+                                                                    <a href="#0" class="name">{{this.name}}</a>
+                                                                </div>
+                                                                <div class="movie-schedule">
+                                                                    {{#each this.ShowTimes}}
+                                                                        <div class="item">
+                                                                            {{this.time}}
+                                                                        </div>
+                                                                    {{/each}}
+                                                                </div>
+                                                            </li>
+                                                        {{/each}}
+                                                    </ul>
+                                                {{else}}
+                                                    <p>hiện tại không có suất chiếu tại cụm rạp này.</p>
+                                                {{/if}}
                                             </div>
                                         </div>
                                     </div>
@@ -129,8 +128,8 @@
                             </div>
                             <div class="tab-item">
                                 <div class="item">
-                                    <h5 class="sub-title">{{movie.dataValues.name}}</h5>
-                                    <p>{{movie.dataValues.description}}</p>
+                                    <h5 class="sub-title">{{movie.name}}</h5>
+                                    <p>{{movie.description}}</p>
                                 </div>
                             </div>
                         </div>
