--- a/src/views/pages/home.hbs
+++ b/src/views/pages/home.hbs
@@ -33,7 +33,7 @@
                         <div class="col-lg-7 form-group">
                             <input id="searchInput" type="text" placeholder="Nhập tên phim" name="movie" />
                             <button type="button" data-toggle="tooltip" data-placement="top"
-                                title="Bạn có thể tìm kiếm suất chiều của tất cả các phim thuộc cụm rạp nếu bạn không nhập tên phim.">
+                                title="Chỉ cho phép tìm kiếm có dấu, không phân biệt hoa, thường. Bạn có thể tìm kiếm suất chiều của tất cả các phim thuộc cụm rạp nếu bạn không nhập tên phim.">
                                 <i class="far fa-question-circle"></i>
                             </button>
                             <button type="submit">
