--- a/src/views/pages/movie.hbs
+++ b/src/views/pages/movie.hbs
@@ -8,7 +8,7 @@
                 </a>
             </div>
             <div class="details-banner-content offset-lg-3">
-                <h3 class="title">{{movie.name}}</h3>
+                <h3 id="title" class="title" data-value="{{movie.id}}">{{movie.name}}</h3>
                 <a class="button">{{movie.category}}</a>
                 <div class="social-and-duration">
                     <div class="duration-area">
@@ -84,7 +84,7 @@
                                                     <img src="/images/ticket/city.png" alt="ticket" />
                                                 </div>
                                                 <span class="type">cụm rạp</span>
-                                                <select class="select-bar cinemas" name="cinema">
+                                                <select class="select-bar query-cinemas" name="cinema">
                                                     {{#each cinemas}}
                                                         <option value="{{this.unsignedName}}">
                                                             {{this.name}}
@@ -96,7 +96,7 @@
                                     </div>
                                     <div class="ticket-plan-section">
                                         <div class="row justify-content-center">
-                                            <div class="col-lg-12 mb-5 mb-lg-0">
+                                            <div class="showtimes col-lg-12 mb-5 mb-lg-0">
                                                 {{#if cinema}}
                                                     <ul class="seat-plan-wrapper bg-five">
                                                         {{#each cinema.Rooms}}
@@ -106,7 +106,7 @@
                                                                         <i class="fas fa-film"></i>
                                                                         <i>{{this.RoomType.name}}</i>
                                                                     </div>
-                                                                    <a href="#0" class="name">{{this.name}}</a>
+                                                                    <a class="name">{{this.name}}</a>
                                                                 </div>
                                                                 <div class="movie-schedule">
                                                                     {{#each this.ShowTimes}}
