--- a/src/views/pages/home.hbs
+++ b/src/views/pages/home.hbs
@@ -29,7 +29,7 @@
             </div>
             <div class="tab-area">
                 <div class="tab-item active">
-                    <form class="ticket-search-form" action="/search">
+                    <form class="ticket-search-form" autocomplete="off" action="/search">
                         <div class="col-lg-7 form-group">
                             <input id="searchInput" type="text" placeholder="Nhập tên phim" name="movie" />
                             <button type="button" data-toggle="tooltip" data-placement="top"
