--- a/src/views/pages/login.hbs
+++ b/src/views/pages/login.hbs
@@ -6,7 +6,7 @@
                     <span class="cate"><a href="/">{{appName}}</a> </span>
                     <h2 class="title">đăng nhập</h2>
                 </div>
-                <form id="login-form" class="account-form" method="POST">
+                <form id="login-form" class="account-form" method="POST" autocomplete="off">
                     <div class="form-group">
                         <label class="error" for="email">{{logErr}}</label>
                         <label for="email">email <span>*</span></label>
