--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -8,7 +8,7 @@
             </div>
             <ul class="menu">
                 <li>
-                    <a href="/" class="active">mua vé</a>
+                    <a href="/" class="active">trang chủ</a>
                 </li>
                 <li>
                     <a href="#">hệ thống rạp phim</a>
