complete build view cinema

--- a/src/views/pages/cinema.hbs
+++ b/src/views/pages/cinema.hbs
@@ -16,11 +16,11 @@
     <div class="container">
         <div class="tab">
             <ul class="tab-menu">
-                <li class="active">thông tin rạp</li>
-                <li>phim chiếu tại rạp</li>
+                <li>thông tin rạp</li>
+                <li class="active">suất chiếu tại rạp</li>
             </ul>
             <div class="tab-area">
-                <div class="tab-item active">
+                <div class="tab-item">
                     <div class="section-header-3">
                         <h2 class="title">wowo hồ chí minh</h2>
                         <p>
@@ -122,10 +122,30 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-item">
+                <div class="tab-item active">
                     <div class="ticket-plan-section mt-50">
                         <div class="row justify-content-center">
-                            <div class="col-lg-3 mb-5 mb-lg-0"></div>
+                            <div class="col-lg-3 mb-5 mb-lg-0">
+                                <div class="all-showtimes movie-area mb-10">
+                                    <div class="movie-list">
+                                        <div class="movie-content bg-one">
+                                            <h5 class="title">
+                                                <a href="movie-details.html">the most wanted</a>
+                                            </h5>
+                                            <div class="movie-tags">Hài</div>
+                                            <div class="release">
+                                                <b>Công chiếu:</b> 11-11-2021
+                                            </div>
+                                        </div>
+                                        <div class="movie-thumb c-thumb">
+                                            <a href="#" data-background="/images/movie/movie12.jpg"
+                                                style="background-image: url('/images/movie/movie12.jpg');">
+                                                <img src="/images/movie/movie12.jpg" alt="movie">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="col-lg-9 mb-5 mb-lg-0">
                                 <ul class="seat-plan-wrapper bg-five">
                                     <li>
