--- a/src/public/stylesheets/main.css
+++ b/src/public/stylesheets/main.css
@@ -3379,11 +3379,6 @@ input[type='submit'] {
     }
 }
 
-.movie-list .movie-content {
-    background: transparent;
-    width: 100%;
-}
-
 .movie-list .movie-content .title {
     margin-bottom: 18px;
 }
@@ -3431,18 +3426,8 @@ input[type='submit'] {
 }
 
 @media (min-width: 576px) {
-    .movie-list .movie-content {
-        width: calc(100% - 220px);
-        padding-left: 30px;
-    }
     .movie-list .movie-content .title {
         margin-top: -5px;
-    }
-}
-
-@media (min-width: 768px) {
-    .movie-list .movie-content {
-        width: calc(100% - 255px);
     }
 }
 
@@ -9495,4 +9480,14 @@ input:-webkit-autofill {
 .gallery-section .tab-menu li.active {
     color: #31d7a9;
     border-bottom: 1px solid #31d7a9;
+}
+.all-showtimes,
+.all-showtimes .movie-list {
+    display: flex;
+}
+.all-showtimes {
+    justify-content: center;
+}
+.all-showtimes .movie-list {
+    flex-direction: column;
 }
