--- a/src/views/pages/movie.hbs
+++ b/src/views/pages/movie.hbs
@@ -13,7 +13,8 @@
                 <div class="social-and-duration">
                     <div class="duration-area">
                         <div class="item">
-                            <i class="fas fa-calendar-alt"></i><span>{{movie.openingDay}}</span>
+                            <i
+                                class="fas fa-calendar-alt"></i><span>{{formatDate movie.openingDay 'vi' 'Do MMMM YYYY'}}</span>
                         </div>
                         <div class="item">
                             <i class="far fa-clock"></i><span>{{movie.time}} phút</span>
@@ -111,7 +112,7 @@
                                                                 <div class="movie-schedule">
                                                                     {{#each this.ShowTimes}}
                                                                         <div class="item">
-                                                                            {{this.time}}
+                                                                            {{formatDateTime this.time 'vi' 'LT DD [/] MM'}}
                                                                         </div>
                                                                     {{/each}}
                                                                 </div>
