complete view all move function

--- a/src/views/pages/cinema.hbs
+++ b/src/views/pages/cinema.hbs
@@ -32,7 +32,7 @@
                         row
                         justify-content-center
                         gallery-wrapper
-                        mb-30-none
+                        mb-50
                     ">
                         <div class="col-lg-3 col-sm-6">
                             <div class="gallery-item two">
@@ -82,6 +82,20 @@
                             </div>
                         </div>
                     </div>
+                    <div class="section-header-3">
+                        <p>
+                            <b>Địa chỉ: </b>{{cinema.address}}
+                        </p>
+                    </div>
+                    <div class="
+                        row
+                        justify-content-center">
+                        <div class="col-lg-8">
+                            <p style="text-align: center;"><iframe
+                                    src="https://www.google.com/maps/embed?pb={{cinema.map}}" width="100%" height="450"
+                                    allowfullscreen="" loading="lazy"></iframe></p>
+                        </div>
+                    </div>
                 </div>
                 <div class="tab-item dynamic">
                     <div class="ticket-plan-section mt-50">
@@ -128,5 +142,4 @@
                 </div>
             </div>
         </div>
-    </div>
 </section>
