--- a/src/views/pages/home.hbs
+++ b/src/views/pages/home.hbs
@@ -53,7 +53,7 @@
                         </div>
                         <div class="col-lg-7 form-group">
                             <input id="searchInput" type="text" placeholder="Nhập tên phim" name="movie" />
-                            <small id="searchHelp" class="form-text text-danger">{{searchErr}}</small>
+                            <small id="searchResponse" class="form-text text-danger">{{searchResponse}}</small>
                             <button type="button" data-toggle="tooltip" data-placement="top"
                                 title="Chỉ cho phép tìm kiếm có dấu, không phân biệt chữ hoa, thường.">
                                 <i class="far fa-question-circle"></i>
